# little_learner

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
.woodpecker/: .build.yml
little_learner/: Cargo.toml
little_learner/src/: argmax.rs  auto_diff.rs  block.rs  const_teq.rs  decider.rs  expr_syntax_tree.rs  ext.rs  gradient_descent.rs  hyper.rs  layer.rs  lib.rs  loss.rs  not_nan.rs  predictor.rs  sample.rs  scalar.rs  smooth.rs  tensor.rs  traits.rs
little_learner_app/: Cargo.toml
little_learner_app/src/: hyper.rs  iris.rs  main.rs  rms_example.rs  sample.rs  with_tensor.rs
src/: auto_diff.rs  expr_syntax_tree.rs  main.rs
